create task POST API with joi validation adn swagger doc
