# src/models/task.js
@@ -1,7 +1,9 @@
 const { DataTypes } = require("sequelize");
 
 const sequelize = require("../utils/DbConnection");
-const {Employee} = require('./employee')
+const { Employee ,findEmployee} = require("./employee");
+const COMMON = require("../constants/common");
+const Utils = require("../utils/helper");
 
 const Task = sequelize.define(
   "task",
@@ -25,26 +27,69 @@ const Task = sequelize.define(
     },
     date_assigned: {
       type: DataTypes.DATE,
-      allowNull:true
+      allowNull: true,
     },
-    deadline:{
+    deadline: {
       type: DataTypes.DATE,
-      allowNull:true
+      allowNull: true,
     },
-    date_started:{
+    date_started: {
       type: DataTypes.DATE,
-      allowNull:true
+      allowNull: true,
     },
-    date_completed:{
+    date_completed: {
       type: DataTypes.DATE,
-      allowNull:true
-    }
+      allowNull: true,
+    },
   },
   { timestamps: true }
 );
 
 //defining relationships
 Task.belongsTo(Employee, { foreignKey: "employeeId" });
-Employee.hasMany(Task, { foreignKey: 'employeeId' });
+Employee.hasMany(Task, { foreignKey: "employeeId" });
 
-module.exports = Task;
+const saveTask = async (data) => {
+  const taskData = {
+    summary: data?.summary,
+  };
+
+  if (data?.description) {
+    taskData.description = data.description;
+  }
+  if (data?.employeeId) {
+    await findEmployee(data.employeeId);
+    taskData.employeeId = data.employeeId;
+    taskData.date_assigned = Utils.convertToIST(new Date());
+  }
+  if (data?.deadline) {
+    taskData.deadline = data.deadline;
+  }
+
+  if (data?.status) {
+    switch (data.status) {
+      case COMMON.TASK_STATUS.INPROGRESS:
+        taskData.date_started = Utils.convertToIST(new Date());
+        taskData.status = data.status;
+        break;
+        
+      case COMMON.TASK_STATUS.DONE:
+        taskData.date_completed = Utils.convertToIST(new Date());
+        taskData.status = data.status;
+        break;
+
+      default:
+        taskData.status = COMMON.TASK_STATUS.TODO;
+    }
+  }
+
+  const task = new Task(taskData);
+  await task.save();
+
+  return task;
+};
+
+module.exports = {
+  Task,
+  saveTask,
+};
